Creacion de vistas, controladores..

--- a/views/home.html
+++ b/views/home.html
@@ -1,1 +1,10 @@
-HOME
+HOME {{name}}
+
+{{#noticias}}
+
+    <div class="noticia">
+        <div class="title">{{title}}</div>
+        <div class="content">{{content}}</div>
+    </div>
+    
+{{/noticias}}
