--- a/views/home.html
+++ b/views/home.html
@@ -1,10 +1,15 @@
-HOME {{name}}
+HOME
 
-{{#noticias}}
+<div class="box">
+    Iniciar sesion: <br>
+    Username: <input id="username" type="text" > <br>
+    Password: <input id="password" type="password" > <br>
+</div>
 
-    <div class="noticia">
-        <div class="title">{{title}}</div>
-        <div class="content">{{content}}</div>
-    </div>
-    
-{{/noticias}}
+<div class="box">
+    Nuevo usuario: <br>
+    Username: <input id="newUsername" type="text" > <br>
+    Email: <input id="newEmail" type="email" > <br>
+    Password: <input id="newPassword" type="password" > <br>
+    Image: <input id="newImage" type="file" > <br>
+</div>
