--- a/comingsoon/css/commingSoon.scss
+++ b/comingsoon/css/commingSoon.scss
@@ -15,3 +15,20 @@ body{
 .email{
     margin-top: -50px;
 }
+
+input{
+    height: 24px;
+    border-radius: 5px 0 0 5px;
+    text-align: center;
+    border: 1px solid #555;
+}
+
+button{
+    background: #960049;
+    border: 1px solid #555;
+    border-radius: 0 15px 15px 0;
+    padding: 5px 8px;
+    color: #fff;
+    text-shadow: 1px 1px #000;
+    margin-left: -2px;
+}
