--- a/styles/global.css
+++ b/styles/global.css
@@ -3,18 +3,30 @@ body {
   display: none;
 }
 
-/* line 7, global.scss */
+/* line 5, global.scss */
 html {
   background: no-repeat center center;
   background-image: url("../img/334.gif");
   width: 100%;
   height: 100%;
 }
-/* line 13, global.scss */
+/* line 11, global.scss */
 html.load {
   background: transparent !important;
 }
-/* line 16, global.scss */
+/* line 14, global.scss */
 html.load body {
   display: block;
+}
+
+/* line 20, global.scss */
+.box {
+  border: 1px solid #000;
+  padding: 5px;
+  text-align: center;
+}
+
+/* line 27, global.scss */
+header #userStatus {
+  float: right;
 }
