--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,7 +1,5 @@
 body{
     display: none;
-    
-    
 }
 
 html{
@@ -16,5 +14,17 @@ html{
         body{
             display: block;
         }
+    }
+}
+
+.box{
+    border: 1px solid #000;
+    padding: 5px; 
+    text-align: center;
+}
+
+header{
+    #userStatus{
+        float: right;
     }
 }
